[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/ball/red/red_ball_front.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ball/blue/blue_ball_front.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/gui/arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ball/yellow/yellow_ball_front.png" type="Texture" id=4]
[ext_resource path="res://Screens/Selection/CharacterCreation.gd" type="Script" id=5]

[node name="SelectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
sprite_options = PoolStringArray( "ball/blue/blue_ball_front.png", "ball/red/red_ball_front.png", "ball/green/green_ball_front.png", "ball/yellow/yellow_ball_front.png" )
sprite_names = PoolStringArray( "blue_ball", "red_ball", "green_ball", "yellow_ball" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -55.0
margin_right = 52.0
margin_bottom = 55.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 52, 29 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="sprite_name" type="Label" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 14.0
text = "yellow_ball"
align = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 104.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )

[node name="Options" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 84.0
margin_bottom = 16.0
custom_constants/separation = 8

[node name="field_left" type="TextureRect" parent="VBoxContainer/HBoxContainer/Options"]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="current" type="TextureRect" parent="VBoxContainer/HBoxContainer/Options"]
margin_left = 24.0
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="field_right" type="TextureRect" parent="VBoxContainer/HBoxContainer/Options"]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="Right" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 104.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
flip_h = true

[node name="Use" type="Button" parent="VBoxContainer"]
margin_left = 33.0
margin_top = 38.0
margin_right = 70.0
margin_bottom = 58.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Use"

[node name="Name" type="LineEdit" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 104.0
margin_bottom = 86.0
size_flags_horizontal = 5
size_flags_vertical = 4
max_length = 10
placeholder_text = "Display Name"

[node name="Done" type="Button" parent="VBoxContainer"]
margin_left = 29.0
margin_top = 90.0
margin_right = 75.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Done"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/Left" to="." method="_on_Left_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Right" to="." method="_on_Right_button_up"]
[connection signal="button_up" from="VBoxContainer/Use" to="." method="_on_Use_button_up"]
[connection signal="text_entered" from="VBoxContainer/Name" to="." method="_on_Name_text_entered"]
